Set up CI with Azure Pipelines 1
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,9 @@
 variables:
   InjectAlmOctaneTasks: 'true'
   OctaneConnectionName: 'DavidMilstein'
+  ALMOctaneConnection1Workspaces: '2001'
+  ALMOctaneLogLevel: 'debug'
+  # GithubRepositoryConnection: ''
 
 jobs:
 - job: AlmOctanePipelineStart
