Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ variables:
   OctaneConnectionName: 'DavidMilstein'
   ALMOctaneConnection1Workspaces: '2001'
   ALMOctaneLogLevel: 'debug'
-  # GithubRepositoryConnection: ''
+  GithubRepositoryConnection: 'github.com_DavidMilstein'
 
 jobs:
 - job: AlmOctanePipelineStart
